# GECCO-2026

./: Algorithms.ipynb  Algorithms.py  README.md  benchmark_results.csv  benchmarker.py  example.ipynb  ga.ipynb  ga.py  main.py  pyproject.toml  requirements.txt
results/: COMPETITION.json  GA.csv  GA_history.json  GREEDY.csv  GREEDY.json  GREEDY_history.json  HYBRID.csv  HYBRID.json  HYBRID_history.json  LAHC.csv  LAHC.json  LAHC_history.json  LAHC_vs_BEST.csv  ML.csv  ML.json  OtherResearcher.json  SPEA-II.csv  SPEA-II.json  SPEA-II_5K.json  SPEA-II_history.json  SPEA-II_history_5K.json  benchmark_results.csv  best_params_hybrid.json  best_params_lahc.json  best_results.json  other.csv
results/params/: best_params_ga.json  best_params_lahc.json
src/: __init__.py  benchmarker.py  hyperparameter.py
src/algorithms/: Algorithms.ipynb  __init__.py  aspea.py  ga.py  greedy.py  lahc.py  ml.py  spea.py  spea_lahc.py  tabu.py
src/core/: candidate.py  fjssp_algorithm.py  instance.py
src/util/: __init__.py  benchmark_parser.py  encoding.py  evaluation.py  visualization.py
util/: benchmark_parser.py  encoding.py  example.ipynb
