[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gecco-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
gecco-benchmarker = "src.benchmarker:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
